--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,10 +1,22 @@
-$font-color: blue;
+@import "./utils.scss";
 
+html, body {
+  margin : 0;
+  padding: 0;
+}
+
+/** temporary style **/
 .app {
-  background-color: teal;
+  width : 100%;
+  height: 100%;
+  background-color: #f5f5f5;
 
-  .sub-app {
-    background-color: wheat;
-    color: $font-color;
+  .sub-menu {
+    padding: 8px;
+    background-color: #777B94;
+
+    a {
+      margin-right: 8px;
+    }
   }
 }
