--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,8 +1,12 @@
 @import "./utils.scss";
 
-html, body {
+* { 
+  padding: 0; 
   margin : 0;
-  padding: 0;
+} 
+
+html, body, #root {
+  height  : 100%;
 }
 
 /** temporary style **/
